--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/seudb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://containers-us-west-61.railway.app/backendewaredb?allowPublicKeyRetrieval=true&useSSL=false
 
-spring.datasource.username=admin
-spring.datasource.password=password
+spring.datasource.username=root
+spring.datasource.password=SBsHJhIcnOQ7JYIfTnIp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuração do JPA
