--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.web.resources.static-locations=classpath:/static/,classpath:/public/,clas
 
 
 # Porta da aplicação
-server.port=8081
+# server.port=8081
