--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-spring.datasource.url=jdbc:mysql://containers-us-west-61.railway.app/backendewaredb?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/seudb?allowPublicKeyRetrieval=true&useSSL=false
 
 spring.datasource.username=root
-spring.datasource.password=SBsHJhIcnOQ7JYIfTnIp
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 # Configuração do JPA
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
@@ -24,4 +23,4 @@ spring.web.resources.static-locations=classpath:/static/,classpath:/public/,clas
 
 
 # Porta da aplicação
-# server.port=8081
+server.port=8081
